# CFDCourse23

./: .gitignore  CMakeLists.txt  readme.txt  winbuild64.bat
doc/: CMakeLists.txt  Doxyfile  MainPage.md  impl.md  install.md  mycss.css
gmsh_scripts/: cube.geo  cube.geo_unrolled  cube.vtk  cube_8.geo  rect.geo  rect.geo_unrolled  rect.vtk  rect_4.geo  rect_with_hole.geo  rect_with_hole.geo_unrolled
input_data/: .gitignore
lib/: CMakeLists.txt  common.hpp  debug.cpp  debug.hpp  geom.hpp  tictoc.cpp  tictoc.hpp  timedep_writer.cpp  timedep_writer.hpp
lib/appr/: anodal_fem_approximator.cpp  anodal_fem_approximator.hpp  cubic_fem_approximator.cpp  cubic_fem_approximator.hpp  fdm_approximator.cpp  fdm_approximator.hpp  fvm_approximator.cpp  fvm_approximator.hpp  linear_fem_approximator.cpp  linear_fem_approximator.hpp  output_fields.hpp  quadratic_fem_approximator.cpp  quadratic_fem_approximator.hpp  spatial_approximator.cpp  spatial_approximator.hpp
lib/appr/fe/: __linear_segment.cpp  aelement.cpp  aelement.hpp  anum_element.cpp  anum_element.hpp  bilinear_quadrangle.cpp  bilinear_quadrangle.hpp  buildgl.py  cubic_segment.cpp  cubic_segment.hpp  fe_quadrature.cpp  fe_quadrature.hpp  linear_bubble_triangle.cpp  linear_bubble_triangle.hpp  linear_buble_triangle.cpp  linear_buble_triangle.hpp  linear_segment.cpp  linear_segment.hpp  linear_tetrahedron.cpp  linear_tetrahedron.hpp  linear_triangle.cpp  linear_triangle.hpp  quadratic_segment.cpp  quadratic_segment.hpp  quadratic_triangle.cpp  quadratic_triangle.hpp
lib/grid/: agrid.cpp  agrid.hpp  agrid_boundary.cpp  agrid_boundary.hpp  regular_grid.cpp  regular_grid.hpp  regular_grid_boundary.cpp  regular_grid_boundary.hpp  unstructured_grid.cpp  unstructured_grid.hpp
lib/prob/: explicit_transport_solver.cpp  explicit_transport_solver.hpp  implicit_transport_solver.cpp  implicit_transport_solver.hpp  monitor.cpp  monitor.hpp  nonstationary_problem.cpp  nonstationary_problem.hpp  poisson_solver.cpp  poisson_solver.hpp
lib/slae/: csrmat.cpp  csrmat.hpp  dense_mat.cpp  dense_mat.hpp  matrix_solver.hpp
progs/: CMakeLists.txt  fem_poisson.cpp  poisson.cpp  prog_common.hpp  sandbox.cpp  transport.cpp
tasks/: euler.cpp  exam.txt  tasks.txt
